@@ -1,3 +1,6 @@
+Tue Feb 28 2017 Nick  Miller <nick.miller@onyxpoint.com> - 2.0.1-0
+- travis.yml and gemfile updates
+
 Fri Oct 28 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 2.0.0-0
 - New map format
 - New output format
